--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </aside>
     </div>
 
-    <footer class="muted">Want additional features or UI changes? Tell me!</footer>
+    <footer class="muted">made by pinki - _pinki.</footer>
   </div>
 
   <script>
